--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             <a href="#" class="brand-logo">BULLET.</a>
         </div>
     </nav>
+    <form id='username-form'>
+        <input id='username-input' type="text" name='username' placeholder='enter username'>
+        <input id='user-aspire' type="text" name='aspiration' placeholder='enter aspiration'>
+        <button id='username' class="btn waves-effect waves-light teal darken-3" type="submit" name="action">Login<i
+                class="material-icons right"></i>
+        </button>
+    </form>
+
 
     <div class="row">
         <form id='bullet-form' class="col s12">
