--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
             <div class="input-field col s6">
                 <i class="material-icons prefix">brightness_low</i>
                 <input id="edit-priorities" type="text">
-                <label for="icon_brightness_low">Top Priorities</label>
+                <label for="icon_brightness_low"></label>
             </div>
             <div class="input-field col s6">
                 <i class="material-icons prefix">brightness_low</i>
                 <input id="edit-gratitude" type="text">
-                <label for="icon_brightness_low">I am Grateful For</label>
+                <label for="icon_brightness_low"></label>
             </div>
             <div class="input-field col s6">
                 <i class="material-icons prefix">brightness_2</i>
                 <input id="edit-accomplishments" type="text">
-                <label for="icon_brightness_2">I Accomplished</label>
+                <label for="icon_brightness_2"></label>
             </div>
             <div class="input-field col s6">
                 <i class="material-icons prefix">brightness_2</i>
                 <input id="edit-improvements" type="text">
-                <label for="icon_brightness_2">I Will Improve</label>
+                <label for="icon_brightness_2"></label>
             </div>
         </div>
         <button id='edit-bullet' data-action='edit-bullet' class="btn waves-effect waves-light teal darken-3"
