--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             type="submit" name="action">Edit Bullet<i class="material-icons right"></i>
         </button>
     </form>
-    <div id='bullet-div'> </div>
+    <div class='row' id='bullet-div'> </div>
 </body>
 
 </html>
