--- a/index.html
+++ b/index.html
@@ -20,14 +20,28 @@
             <a href="#" class="brand-logo">BULLET.</a>
         </div>
     </nav>
+    <div class="row">
+        <form id='username-form' class="col s12">
+            <div class="row">
+                <div class="input-field col s6">
+                    <i class="material-icons prefix">face</i>
+                    <input id='username-input' type="text">
+                    <label for="icon_face">Username</label>
+                </div>
+                <div class="input-field col s6">
+                    <i class="material-icons prefix">flash_on</i>
+                    <input id='user-aspire' type="text">
+                    <label for="icon_flash_on">Aspiration</label>
+                </div>
+            </div>
+            <button id='username' class="btn waves-effect waves-light teal darken-3" type="submit" name="action">Login<i
+                    class="material-icons"></i>
+            </button>
+    </div>
 
-    <form id='username-form'>
-        <input id='username-input' type="text" name='username' placeholder='enter username'>
-        <input id='user-aspire' type="text" name='aspiration' placeholder='enter aspiration'>
-        <button id='username' class="btn waves-effect waves-light teal darken-3" type="submit" name="action">Login<i
-                class="material-icons"></i>
-        </button>
     </form>
+
+
 
 
     <div class="row">
